syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "BillingServiceOuterClass";

service billingservice {
    rpc createBillingAccount(billingRequest) return billingResponse;
}

message billingRequest{
 string patientId = 1;
 string name = 2;
 string email =3;
}

message billingResponse{
string accountId =1;
string status = 2;
}


